chore: changing publish config in package.json
This commit configures package.json so that this package is published using
GitHub registry.

--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
   "homepage": "https://github.com/giovannicuriel/aws-alternative#readme",
   "dependencies": {
     "aws-sdk": "2.566.0"
-  }
+  },
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" } 
 }
