--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aws-alternative",
+  "name": "@giovannicuriel/aws-alternative",
   "version": "1.0.0",
   "description": "AWS lib wrapper",
   "main": "src/index.js",
