--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "homepage": "https://github.com/giovannicuriel/aws-alternative#readme",
   "dependencies": {
     "aws-sdk": "2.566.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
